--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,9 @@ body {
   box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
 }
 
+.jobs:hover {
+background-color: rgb(243, 237, 237);
+}
 
 .hello {
 }
