--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,13 @@ body {
 background-color: rgb(243, 237, 237);
 }
 
+.loginLogo {
+  background-image : url('./images/logo1.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 .hello {
 }
 
