--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-body, html {
+/* html, body {
+  height:100%;
+  
+} */
+
+#root {
 height: 100%;
+box-sizing: border-box;
+min-width: 1100px;
 }
 
+#card {
+  width: 100%;
+}
+
+.logindiv {
+  width: 480px;
+}
 
 .card:hover {
   box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4)}
 
- 
-  
 
-  .card {
-  
+  @media (max-width: 600px)
+  {.App {
+    display: 'flex';
+    flex-direction: column;
+    width: 100%;
    
-
   }
 
-  #root {
+  .logindiv {
+    width: 260px;
+  }
+
+.job {
+  visibility: hidden;
+  width:100%;
+}
+
+
+
+.videoDiv {
+  display: flex;
+  flex-direction: row;
+  position: sticky;
+  top: 0;
+  margin-top: 0;
+  width: 100%;
+  background-color:black;
+  margin-left: 0;
+  margin-right: 0;
   
-  }
+}
 
-  #test {
+.cardSpace {
+  width: 100%;
  
-  }
 
+}
+
+#card {
+  width: 96%;
+  margin-left: 12px;
+}
+.box {
+  width: 100%;
+ 
+ 
   
- .cardSpace {
+}
+
+.videoOne {
+  width: 100%;
+  
+ 
+}
+
+
+.searchbar {
+  flex-direction:column;
+}
+} 
+
+
+
+ @media (max-width: 1023px) {
+   .cardSpace {
+    margin-top: 2%;
+    margin-left: 2%;
+    width: 100%}
+
+ }
+
+ @media (min-width: 1240px) {
+  .cardSpace {
    margin-top: 2%;
    margin-left: 2%;
-   width: 30%;
-   
- }
+   width: 46%}
+
+}
+
+ @media (min-width: 1280px) {
+  .cardSpace {
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 30.6%;
+    
+  }
+
+  .table {
+    height: 120px;
+  }
+}
+
 
  .box {
    width: 100%;
+  
    
  }
 
@@ -41,7 +125,7 @@ border: 1px solid black;
 
  }
 
- 
+
 
  /* * {
   box-sizing: border-box;
@@ -109,6 +193,7 @@ body {
 
 #root {
   background: #f0f0f0;
+ 
 }
 
 .card {
